* Fixed dedicated fullscreen not working with ALT+ENTER toggle
* Fixed not being able to define the Windows key
* Fixed r_fullbright 1 with multitexturing
* Mostly fixed panning up and down after you die - you could previously the server and client viewangles while dead... (TODO: ACTUALLY FIX!!!)
* Restored gl_drawbuffer functionality

NEW FEATURES:
* Added many features to cl_showpos:
	* Viewangles (both refdef and client) 
	* Number of entities being rendered
	* Number of dynamic lights being rendered
	* Number of particles bing rendered
* Added option to switch between borderless and dedicated fullscreen to settings

OTHER ENHANCEMENTS:
* Moved mouse code from platform specific to platform independent code (because now it is). All input code is now platform independent!
* Renamed in_ cvars to input_ and same for functions
* Made input shift code slightly less insane
* Removed almost all relative path includes (one of them is required due to being compiled from two projects...)
* Scale FOV with aspect ratio - CURRENTLY THIS FUCKS CULLING!

REMOVALS:
* Removed v_centerspeed cvar (was already dead)
* Removed v_centermove cvar (was already dead)
* Removed viewpos command (cl_showpos 1 far superior and duplicates functionality)
* Removed joystick support (code sucks, only obsolete joysticks supported, DirectInput only, non-portable, not even supported on Linux it seems?)
	* Removed joy_name cvar
	* Removed joy_advanced cvar
	* Removed joy_advaxisx cvar
	* Removed joy_advaxisy cvar
	* Removed joy_advaxisz cvar
	* Removed joy_advaxisr cvar
	* Removed joy_advaxisu cvar
	* Removed joy_advaxisv cvar
	* Removed joy_forwardthreshold cvar
	* Removed joy_sidethreshold cvar
	* Removed joy_pitchthreshold cvar
	* Removed joy_yawthreshold cvar
	* Removed joy_forwardsensitivity cvar
	* Removed joy_sidesensitivity cvar
	* Removed joy_pitchsensitivity cvar
	* Removed joy_yawsensitivity cvar
	* Removed joy_upthreshold cvar
	* Removed joy_upsensitivity cvar